tests/negative/dave_missingopml.opml
<?xml version="1.0" encoding="ISO-8859-1"?><haha version="1.1"/>